# py-demo

./: Containerfile  main.py  pyproject.toml  requirements.txt
