[tool.poetry]
name = "py-demo"
version = "0.1.0"
description = ""
authors = ["Jesse Jaggars <jhjaggars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cloudevents = "^1.2.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
